changing the lorems

--- a/index.html
+++ b/index.html
@@ -185,12 +185,12 @@
         <div
           class="mt-4 p-4 bg-black text-white rounded-xl lg:p-8 lg:max-w-xl lg:absolute lg:bottom-8 lg:right-8 lg:transform lg:-translate-y-2"
         >
-          <h3 class="text-lg font-extrabold lg:text-2xl">
+          <h3 class="text-lg font-extrabold lg:text-2xl mb-3">
             Meet all the heroes from the field
           </h3>
           <p class="opacity-40 font-medium text-sm lg:text-base">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Join us on a journey to explore the inspiring narratives of hockey's
+            true heroes.
           </p>
         </div>
       </div>
@@ -207,8 +207,9 @@
             Professional Hockeys Club
           </h1>
           <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Immerse yourself in the world of elite hockey with our prestigious
+            Professional Hockey Club. Experience the passion, and skill that
+            define our commitment to excellence on and off the pitch.
           </p>
         </div>
         <!-- Section Title End-->
@@ -234,7 +235,8 @@
               Prayer Facility
             </h3>
             <p class="text-[#13131899] font-medium">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Take a moment for reflection and spiritual connection at our
+              dedicated prayer facility.
             </p>
           </div>
 
@@ -256,7 +258,8 @@
               Experienced Coach
             </h3>
             <p class="text-[#13131899] font-medium">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Elevate your game with the insights and coaching of our
+              experienced mentor.
             </p>
           </div>
 
@@ -278,7 +281,8 @@
               Senior Player
             </h3>
             <p class="text-[#13131899] font-medium">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Celebrate and learn from the legacy and prowess of our esteemed
+              senior player.
             </p>
           </div>
 
@@ -300,7 +304,8 @@
               Training Ground
             </h3>
             <p class="text-[#13131899] font-medium">
-              Amet consectetur. Condimentum dignissim adipiscing .
+              Immerse yourself in a world-class training experience at our
+              cutting-edge facility.
             </p>
           </div>
         </div>
@@ -319,8 +324,9 @@
             Program Sections
           </h1>
           <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Our program is thoughtfully divided into specialized sections, each
+            meticulously designed to cater to specific aspects of your hockey
+            development.
           </p>
         </div>
         <!-- Section Title End-->
@@ -337,9 +343,9 @@
             >
               <h3 class="font-extrabold text-xl lg:text-2xl">Junior Program</h3>
               <p class="font-medium max-w-[470px]">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+                Our Junior Program is dedicated to fostering young talent and
+                instilling a passion for hockey. We provide a nurturing
+                environment for young players to thrive.
               </p>
               <div class="">
                 <button
@@ -364,9 +370,9 @@
                 Teenager Program
               </h3>
               <p class="font-medium max-w-[470px]">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+                Focused on honing advanced skills, strategic thinking, and
+                fostering leadership qualities, this program provides a
+                transformative experience for teenagers.
               </p>
               <div class="">
                 <button
@@ -393,9 +399,9 @@
                 Professional Program
               </h3>
               <p class="font-medium max-w-[470px]">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                elit enim sagittis turpis in magna. Id et sed euismod natoque
-                amet nunc morbi nulla. Tortor congue sed et in.
+                The Professional Program is crafted for seasoned players
+                aspiring to reach the pinnacle of their hockey careers with a
+                focus on elite training, and strategic mastery
               </p>
               <div class="">
                 <button
@@ -421,8 +427,9 @@
             Our New Products
           </h1>
           <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Explore the latest additions to our product lineup, each
+            meticulously designed to elevate your hockey experience. Discover
+            how these offerings redefine performance and enhance your outlook.
           </p>
         </div>
         <!-- Section Title End-->
@@ -445,32 +452,32 @@
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
-                    <p class="text-[#1313187f] font-medium">5.0</p>
+                    <p class="text-[#1313187f] font-medium">4.5</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">20</p>
+                    <p class="text-[#1313187f] font-medium">90</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">200</p>
+                    <p class="text-[#1313187f] font-medium">50</p>
                   </div>
                 </div>
                 <!-- middle -->
                 <h3 class="text-our-black text-xl font-extrabold">
-                  World Cup Flags Football
+                  Classic Varsity Jacket
                 </h3>
                 <p class="text-[#13131899] font-medium">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                  Wear the Varsity Jacket for various occasions.
                 </p>
                 <!-- bot -->
                 <div class="flex gap-1 lg:gap-5 flex-col lg:flex-row">
                   <h4 class="font-extrabold text-our-primary text-lg">
-                    Price - $22.00
+                    Price - $42.00
                   </h4>
                   <div class="flex items-center gap-2">
                     <i
@@ -501,32 +508,32 @@
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
-                    <p class="text-[#1313187f] font-medium">5.0</p>
+                    <p class="text-[#1313187f] font-medium">4.8</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">20</p>
+                    <p class="text-[#1313187f] font-medium">70</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">200</p>
+                    <p class="text-[#1313187f] font-medium">50</p>
                   </div>
                 </div>
                 <!-- middle -->
                 <h3 class="text-our-black text-xl font-extrabold">
-                  World Cup Flags Football
+                  Saudi Arabia Ball
                 </h3>
                 <p class="text-[#13131899] font-medium">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                  Hurry! Get our specially crafted unique Saudi Arabia Ball.
                 </p>
                 <!-- bot -->
                 <div class="flex gap-1 lg:gap-5 flex-col lg:flex-row">
                   <h4 class="font-extrabold text-our-primary text-lg">
-                    Price - $22.00
+                    Price - $25.00
                   </h4>
                   <div class="flex items-center gap-2">
                     <i
@@ -563,26 +570,26 @@
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">20</p>
+                    <p class="text-[#1313187f] font-medium">88</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">200</p>
+                    <p class="text-[#1313187f] font-medium">78</p>
                   </div>
                 </div>
                 <!-- middle -->
                 <h3 class="text-our-black text-xl font-extrabold">
-                  World Cup Flags Football
+                  Yellow Cap
                 </h3>
                 <p class="text-[#13131899] font-medium">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                  Look stylish and classy with our newly solid yellow cap.
                 </p>
                 <!-- bot -->
                 <div class="flex gap-1 lg:gap-5 flex-col lg:flex-row">
                   <h4 class="font-extrabold text-our-primary text-lg">
-                    Price - $22.00
+                    Price - $13.00
                   </h4>
                   <div class="flex items-center gap-2">
                     <i
@@ -613,32 +620,32 @@
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
-                    <p class="text-[#1313187f] font-medium">5.0</p>
+                    <p class="text-[#1313187f] font-medium">4.9</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">20</p>
+                    <p class="text-[#1313187f] font-medium">97</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">200</p>
+                    <p class="text-[#1313187f] font-medium">68</p>
                   </div>
                 </div>
                 <!-- middle -->
                 <h3 class="text-our-black text-xl font-extrabold">
-                  World Cup Flags Football
+                  World Cup 2023 Jersey
                 </h3>
                 <p class="text-[#13131899] font-medium">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                  Get the limited edition signed World Cup 2023 jersey.
                 </p>
                 <!-- bot -->
                 <div class="flex gap-1 lg:gap-5 flex-col lg:flex-row">
                   <h4 class="font-extrabold text-our-primary text-lg">
-                    Price - $22.00
+                    Price - $30.00
                   </h4>
                   <div class="flex items-center gap-2">
                     <i
@@ -669,27 +676,27 @@
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-solid fa-star text-[#F99808] text-xl"></i>
-                    <p class="text-[#1313187f] font-medium">5.0</p>
+                    <p class="text-[#1313187f] font-medium">4.5</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">20</p>
+                    <p class="text-[#1313187f] font-medium">80</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">200</p>
+                    <p class="text-[#1313187f] font-medium">67</p>
                   </div>
                 </div>
                 <!-- middle -->
                 <h3 class="text-our-black text-xl font-extrabold">
-                  World Cup Flags Football
+                  Pro Hockey Helmet
                 </h3>
                 <p class="text-[#13131899] font-medium">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                  Get our all time famous and classic green Hockey Helmet.
                 </p>
                 <!-- bot -->
                 <div class="flex gap-1 lg:gap-5 flex-col lg:flex-row">
@@ -731,26 +738,26 @@
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-eye text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">20</p>
+                    <p class="text-[#1313187f] font-medium">95</p>
                   </div>
 
                   <!-- each stat -->
                   <div class="flex items-center gap-2">
                     <i class="fa-regular fa-heart text-xl text-[#1313187f]"></i>
-                    <p class="text-[#1313187f] font-medium">200</p>
+                    <p class="text-[#1313187f] font-medium">88</p>
                   </div>
                 </div>
                 <!-- middle -->
                 <h3 class="text-our-black text-xl font-extrabold">
-                  World Cup Flags Football
+                  World Cup Football
                 </h3>
                 <p class="text-[#13131899] font-medium">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                  Get the rare edition of the 1970s World Cup football.
                 </p>
                 <!-- bot -->
                 <div class="flex gap-1 lg:gap-5 flex-col lg:flex-row">
                   <h4 class="font-extrabold text-our-primary text-lg">
-                    Price - $22.00
+                    Price - $45.00
                   </h4>
                   <div class="flex items-center gap-2">
                     <i
