replaced all lorems

--- a/index.html
+++ b/index.html
@@ -786,8 +786,8 @@
             Clients Question
           </h1>
           <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Still confused? Here are answers to some of the most commonly asked
+            questions of our clients.
           </p>
         </div>
         <!-- Section Title End-->
@@ -826,8 +826,9 @@
                 <p
                   class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
                 >
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  From cutting-edge sticks to protective gear, our collection is
+                  crafted to enhance your skills and ensure a top-notch playing
+                  experience.
                 </p>
               </div>
             </div>
@@ -846,8 +847,9 @@
                 <p
                   class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
                 >
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Whether you're a beginner or an experienced player, our
+                  training programs cater to all levels, ensuring a holistic
+                  development journey.
                 </p>
               </div>
             </div>
@@ -866,8 +868,8 @@
                 <p
                   class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
                 >
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Yes we provide. Experience personalized and focused attention
+                  on your hockey skills through our private lessons.
                 </p>
               </div>
             </div>
@@ -885,8 +887,8 @@
                 <p
                   class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
                 >
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Yes we provide. Immerse yourself in the thrill of ski touring
+                  with our expert-led experiences.
                 </p>
               </div>
             </div>
@@ -904,8 +906,8 @@
                 <p
                   class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
                 >
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Book on our website. Book with ease and get ready for an
+                  exciting adventure on and off the field.
                 </p>
               </div>
             </div>
@@ -921,8 +923,9 @@
                 <p
                   class="text-[#13131899] font-medium text-sm lg:font-normal lg:text-base"
                 >
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna.
+                  Affordable! Discover the affordability and value that define
+                  our pricing, making your hockey experience accessible and
+                  rewarding.
                 </p>
               </div>
             </div>
@@ -943,8 +946,8 @@
             Get In Touch
           </h1>
           <p class="text-[#13131899] font-medium max-w-[607px] mx-auto">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Have questions, comments, or eager to start your hockey journey with
+            us? Our team is here to assist you.
           </p>
         </div>
         <!-- Section Title End-->
@@ -989,7 +992,7 @@
               <div>
                 <p class="text-[#9D9F9A]">Location :</p>
                 <h4 class="text-our-black text-lg font-extrabold">
-                  152/1 Mohakhali Wireless Gate
+                  51-Rose Lane, B/8, Dki Jakarta
                 </h4>
               </div>
             </div>
@@ -1126,8 +1129,8 @@
           <h3 class="text-white text-2xl font-bold mb-7">Get In Touch</h3>
           <div class="space-y-3">
             <p class="max-w-[346px]">
-              Dit amet consectetur. Condimentum adipiscing aliquam turpis
-              placerat dolor. Purus urna in sit nullam proin.
+              Have questions, comments, or eager to start your hockey journey
+              with us? Our team is here to assist you.
             </p>
             <div
               class="flex gap-4 items-center justify-center lg:justify-start"
