fixing small bugs

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 font-medium"
               >
                 <li><a>Home</a></li>
                 <li><a>About</a></li>
@@ -80,8 +80,10 @@
             >
           </div>
           <div class="navbar-center hidden lg:flex">
-            <ul class="menu menu-horizontal px-1 text-base text-[#424247]">
-              <li><a>Home</a></li>
+            <ul
+              class="menu menu-horizontal px-1 text-base text-[#424247] font-medium"
+            >
+              <li><a class="text-our-primary">Home</a></li>
               <li><a>About</a></li>
               <li><a>Pages</a></li>
               <li><a>Blog</a></li>
@@ -90,7 +92,9 @@
           </div>
           <div class="navbar-end space-x-6">
             <div class="hidden md:block">
-              <i class="fa-solid fa-magnifying-glass text-[#424247]"></i>
+              <i
+                class="fa-solid fa-magnifying-glass cursor-pointer text-[#424247]"
+              ></i>
             </div>
             <a
               class="bg-our-primary border border-our-primary py-3 px-4 lg:py-4 lg:px-6 lg:text-xl font-bold cursor-pointer text-white transition-all duration-300 hover:text-our-primary rounded-xl hover:bg-white"
@@ -342,7 +346,7 @@
               class="absolute text-white space-y-3 lg:space-y-6 pb-6 lg:pb-8 pl-6 lg:pl-10 bottom-0 left-0"
             >
               <h3 class="font-extrabold text-xl lg:text-2xl">Junior Program</h3>
-              <p class="font-medium max-w-[470px]">
+              <p class="font-medium max-w-[470px] pr-6">
                 Our Junior Program is dedicated to fostering young talent and
                 instilling a passion for hockey. We provide a nurturing
                 environment for young players to thrive.
@@ -369,7 +373,7 @@
               <h3 class="font-extrabold text-xl lg:text-2xl">
                 Teenager Program
               </h3>
-              <p class="font-medium max-w-[470px]">
+              <p class="font-medium max-w-[470px] pr-6">
                 Focused on honing advanced skills, strategic thinking, and
                 fostering leadership qualities, this program provides a
                 transformative experience for teenagers.
@@ -389,7 +393,7 @@
               <img
                 src="Images/4.png"
                 alt=""
-                class="min-h-60 h-full w-full rounded-xl"
+                class="min-h-60 h-full w-full rounded-xl object-cover"
               />
             </figure>
             <div
@@ -398,7 +402,7 @@
               <h3 class="font-extrabold text-xl lg:text-2xl">
                 Professional Program
               </h3>
-              <p class="font-medium max-w-[470px]">
+              <p class="font-medium max-w-[470px] pr-6">
                 The Professional Program is crafted for seasoned players
                 aspiring to reach the pinnacle of their hockey careers with a
                 focus on elite training, and strategic mastery
@@ -1128,7 +1132,7 @@
         <div class="lg:col-span-2 col-span-4 text-center lg:text-left">
           <h3 class="text-white text-2xl font-bold mb-7">Get In Touch</h3>
           <div class="space-y-3">
-            <p class="max-w-[346px]">
+            <p class="max-w-[346px] mx-auto lg:mx-0">
               Have questions, comments, or eager to start your hockey journey
               with us? Our team is here to assist you.
             </p>
@@ -1256,7 +1260,7 @@
       <!-- copyright -->
       <div class="text-center mt-6">
         <p class="text-white font-medium">
-          Website Created by <br />
+          Website Created by
           <strong class="text-our-primary"
             ><a href="https://www.facebook.com/NoorTusharKhan/"
               >Noor Tushar</a
