--- a/index.html
+++ b/index.html
@@ -336,9 +336,11 @@
         <!-- Section Title End-->
 
         <!-- program gallery start -->
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+        <div
+          class="grid grid-cols-1 lg:grid-cols-2 gap-6 *:relative *:before:bg-[#00000066] *:before:w-full *:before:h-full *:before:absolute *:before:top-0 *:before:left-0 *:rounded-2xl *:overflow-hidden"
+        >
           <!-- item - 01  -->
-          <div class="relative i-1">
+          <div class="">
             <figure>
               <img src="Images/2.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
@@ -363,7 +365,7 @@
 
           <!-- item - 02  -->
 
-          <div class="relative i-1">
+          <div class="">
             <figure>
               <img src="Images/3.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
@@ -388,7 +390,7 @@
             </div>
           </div>
           <!-- item - 03  -->
-          <div class="relative lg:col-span-2 rounded-xl i-1">
+          <div class="lg:col-span-2">
             <figure class="">
               <img
                 src="Images/4.png"
