--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
                 <li><a>Contact</a></li>
               </ul>
             </div>
-            <a class="text-2xl lg:text-4xl text-our-black font-extrabold"
+            <a
+              href="index.html"
+              class="text-2xl lg:text-4xl text-our-black font-extrabold"
               >Hockey<span class="text-our-primary">&CloseCurlyQuote;</span>s</a
             >
           </div>
