--- a/index.html
+++ b/index.html
@@ -90,11 +90,26 @@
             <ul
               class="menu menu-horizontal px-1 text-base text-[#424247] font-medium"
             >
-              <li><a class="text-our-primary">Home</a></li>
-              <li><a>About</a></li>
-              <li><a>Pages</a></li>
-              <li><a>Blog</a></li>
-              <li><a>Contact</a></li>
+              <li>
+                <a
+                  class="text-our-primary hover:text-our-primary hover:bg-transparent"
+                  >Home</a
+                >
+              </li>
+              <li>
+                <a class="hover:text-our-primary hover:bg-transparent">About</a>
+              </li>
+              <li>
+                <a class="hover:text-our-primary hover:bg-transparent">Pages</a>
+              </li>
+              <li>
+                <a class="hover:text-our-primary hover:bg-transparent">Blog</a>
+              </li>
+              <li>
+                <a class="hover:text-our-primary hover:bg-transparent"
+                  >Contact</a
+                >
+              </li>
             </ul>
           </div>
           <div class="navbar-end space-x-6">
@@ -226,11 +241,11 @@
         <!-- Section Title End-->
         <!-- Hockey Club Stats Gallery Start -->
         <div
-          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-0"
+          class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-0 *:flex *:flex-col *:items-center *:text-center *:px-4"
         >
           <!-- Item 1 -->
-          <div class="flex flex-col items-center text-center px-4">
-            <div class="">
+          <div>
+            <div>
               <div
                 class="radial-progress text-our-primary rotate-180"
                 style="--value: 87; --size: 9rem"
@@ -252,8 +267,8 @@
           </div>
 
           <!-- Item 2 -->
-          <div class="flex flex-col items-center text-center px-4">
-            <div class="">
+          <div>
+            <div>
               <div
                 class="radial-progress text-[#49D293] rotate-[110deg]"
                 style="--value: 95; --size: 9rem"
@@ -275,8 +290,8 @@
           </div>
 
           <!-- Item 3 -->
-          <div class="flex flex-col items-center text-center px-4">
-            <div class="">
+          <div>
+            <div>
               <div
                 class="radial-progress text-[#FFB546] rotate-[150deg]"
                 style="--value: 90; --size: 9rem"
@@ -298,8 +313,8 @@
           </div>
 
           <!-- Item 4 -->
-          <div class="flex flex-col items-center text-center px-4">
-            <div class="">
+          <div>
+            <div>
               <div
                 class="radial-progress text-[#4C8DF1] rotate-[170deg]"
                 style="--value: 80; --size: 9rem"
@@ -347,7 +362,7 @@
           class="grid grid-cols-1 lg:grid-cols-2 gap-6 *:relative *:before:bg-[#00000066] *:before:w-full *:before:h-full *:before:absolute *:before:top-0 *:before:left-0 *:rounded-2xl *:overflow-hidden"
         >
           <!-- item - 01  -->
-          <div class="">
+          <div>
             <figure>
               <img src="Images/2.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
@@ -360,7 +375,7 @@
                 instilling a passion for hockey. We provide a nurturing
                 environment for young players to thrive.
               </p>
-              <div class="">
+              <div>
                 <button
                   class="rounded-lg bg-our-primary py-3 px-5 border-0 font-bold hover:bg-white hover:text-our-primary transition-all duration-300"
                 >
@@ -372,7 +387,7 @@
 
           <!-- item - 02  -->
 
-          <div class="">
+          <div>
             <figure>
               <img src="Images/3.png" alt="" class="min-h-60 h-full w-full" />
             </figure>
@@ -387,7 +402,7 @@
                 fostering leadership qualities, this program provides a
                 transformative experience for teenagers.
               </p>
-              <div class="">
+              <div>
                 <button
                   class="rounded-lg bg-our-primary py-3 px-5 border-0 font-bold hover:bg-white hover:text-our-primary transition-all duration-300"
                 >
@@ -398,7 +413,7 @@
           </div>
           <!-- item - 03  -->
           <div class="lg:col-span-2">
-            <figure class="">
+            <figure>
               <img
                 src="Images/4.png"
                 alt=""
@@ -416,7 +431,7 @@
                 aspiring to reach the pinnacle of their hockey careers with a
                 focus on elite training, and strategic mastery
               </p>
-              <div class="">
+              <div>
                 <button
                   class="rounded-lg bg-our-primary py-3 px-5 border-0 font-bold hover:bg-white hover:text-our-primary transition-all duration-300"
                 >
@@ -448,9 +463,11 @@
         <!-- Section Title End-->
 
         <!-- Product Gallery Start -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+        <div
+          class="grid grid-cols-1 md:grid-cols-2 gap-6 *:p-6 *:rounded-2xl *:border-2 *:border-[#13131819]"
+        >
           <!-- Product 1-->
-          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+          <div>
             <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
@@ -506,7 +523,7 @@
           </div>
 
           <!-- Product 2 -->
-          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+          <div>
             <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
@@ -562,7 +579,7 @@
           </div>
 
           <!-- Product 3 -->
-          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+          <div>
             <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
@@ -618,7 +635,7 @@
           </div>
 
           <!-- Product 4 -->
-          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+          <div>
             <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
@@ -674,7 +691,7 @@
           </div>
 
           <!-- Product 5 -->
-          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+          <div>
             <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
@@ -730,7 +747,7 @@
           </div>
 
           <!-- Product 6 -->
-          <div class="p-6 rounded-2xl border-2 border-[#13131819]">
+          <div>
             <div class="grid grid-cols-12 gap-5 items-center justify-between">
               <!-- left -->
               <div
@@ -1013,7 +1030,6 @@
 
           <!-- form container -->
 
-          <!-- using flex -->
           <form class="lg:col-span-4 flex flex-col gap-4 lg:gap-6">
             <div class="flex gap-4 lg:gap-6 flex-col lg:flex-row">
               <!-- 1 -->
@@ -1094,33 +1110,35 @@
           </form>
         </div>
         <!-- Social Icons Start -->
-        <div class="p-7 text-center bg-[#F8F8F8] rounded-xl my-10 space-y-6">
+        <div
+          class="p-7 text-center bg-[#F8F8F8] rounded-xl my-10 space-y-6 shadow-lg"
+        >
           <h3 class="text-our-black text-2xl font-extrabold">Social Media</h3>
 
           <ul class="flex gap-8 justify-center text-2xl">
             <li>
-              <a class="" href=""
+              <a href=""
                 ><i
                   class="fa-brands fa-twitter transition-all duration-300 hover:scale-150 hover:text-our-primary"
                 ></i
               ></a>
             </li>
             <li>
-              <a class="" href=""
+              <a href=""
                 ><i
                   class="fa-brands fa-facebook-f transition-all duration-300 hover:scale-150 hover:text-our-primary"
                 ></i
               ></a>
             </li>
             <li>
-              <a class="" href=""
+              <a href=""
                 ><i
                   class="fa-brands fa-instagram transition-all duration-300 hover:scale-150 hover:text-our-primary"
                 ></i
               ></a>
             </li>
             <li>
-              <a class="" href=""
+              <a href=""
                 ><i
                   class="fa-brands fa-github transition-all duration-300 hover:scale-150 hover:text-our-primary"
                 ></i
