fixed footer copyright margin

--- a/index.html
+++ b/index.html
@@ -1285,7 +1285,7 @@
         </nav>
       </div>
       <!-- copyright -->
-      <div class="text-center mt-6">
+      <div class="text-center mt-10 lg:mt-6">
         <p class="text-white font-medium">
           Website Created by
           <strong class="text-our-primary"
